# py-unused-deps

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test-requirements.txt
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: pr.yaml
requirements/: requirements.txt  test-requirements.txt
scripts/: add-dependencies-hash.sh
src/unused_deps/: __init__.py  __main__.py  compat.py  dependency_parser.py  dist_info.py  errors.py  import_finder.py  main.py  package_detector.py
tests/: config_test.py  dependency_parser_test.py  dist_detector_test.py  dist_info_test.py  errors_test.py  files_test.py  import_finder_test.py  main_test.py  pacakge_detector_test.py  package_detector_test.py  utils.py
tests/end_to_end/: end_to_end_test.py
tests/end_to_end/data/: install_all.py  install_all.sh
tests/end_to_end/data/test_pkg_missing_dep/: pyproject.toml  setup.cfg
tests/end_to_end/data/test_pkg_missing_dep_in_requirements/: pyproject.toml  requirements.txt  setup.cfg
tests/end_to_end/data/test_pkg_missing_dep_with_config/: .py-unused-deps.toml  config-with-no-ignore.toml  pyproject.toml  setup.cfg
tests/end_to_end/data/test_pkg_missing_extra_dep/: pyproject.toml  setup.cfg
tests/end_to_end/data/test_pkg_nested_with_all_deps/: pyproject.toml  setup.cfg
tests/end_to_end/data/test_pkg_nested_with_all_deps/src/nested_all_deps/nested/: __init__.py
tests/end_to_end/data/test_pkg_with_all_deps/: pyproject.toml  setup.cfg
tests/end_to_end/data/test_pkg_with_dep_in_tests/: pyproject.toml  setup.cfg
tests/end_to_end/data/test_without_pkg/: requirements.txt
unused_deps/: compat.py  config.py  dist_detector.py  dist_info.py  errors.py  files.py  import_finder.py  main.py
