[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-unused-deps"
version = "0.4.2"
authors = [
    { name = "Matthew Hughes", email = "matthewhughes934@gmail.com" },
]
description = "Find unused dependencies in your python project"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.8"
dependencies = [
    "tomli;python_version<='3.11'",
    "packaging"
]

[project.scripts]
py-unused-deps = "unused_deps.main:main"

[project.urls]
homepage = "https://github.com/matthewhughes934/py-unused-deps"

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts/*"]

[tool.setuptools.package-data]
unused_deps = ["py.typed"]

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_return_any = false
strict_equality = false

[tool.pytest.ini_options]
addopts = "--strict-markers --ignore tests/end_to_end --ignore tests/end_to_end/data"
filterwarnings = "error"

[tool.isort]
profile = "black"

[tool.coverage.run]
plugins = ["covdefaults"]
branch = true
omit = ["tests/end_to_end/*"]
source = ["unused_deps/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
