[build-system]
# setuptools version with auto inclusion of 'py.typed'
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-unused-deps"
version = "0.4.2"
authors = [
    { name = "Matthew Hughes", email = "matthewhughes934@gmail.com" },
]
description = "Find unused dependencies in your python project"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.9"
dependencies = [
    "tomli;python_version<='3.11'",
    "packaging"
]

[project.scripts]
py-unused-deps = "unused_deps.main:main"

[project.urls]
homepage = "https://github.com/matthewhughes934/py-unused-deps"

[project.optional-dependencies]
test = [
     # version required for pyproject.toml support
    "pytest>=6.0",
    "coverage[toml]",
    "covdefaults>=2.2",

    # for building local dependencies in tests
    "setuptools",
    "poetry",
    "wheel",
    "tomli-w"
]
lint = ["pre-commit"]

[tool.setuptools.packages.find]
namespaces = false
include = ["unused_deps"]

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_return_any = false
strict_equality = false

[tool.pytest.ini_options]
addopts = "--strict-markers --ignore tests/end_to_end --ignore tests/end_to_end/data"
filterwarnings = "error"

[tool.isort]
profile = "black"

[tool.coverage.run]
plugins = ["covdefaults"]
branch = true
omit = ["tests/end_to_end/*"]
source = ["unused_deps/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
