[metadata]
name = unused-deps
version = 0.0.1
author = Matthew Hughes
author_email = matthewhughes934@gmail.com
description = Find unused dependencies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata;python_version<="3.7"
    tomli;python_version<="3.10"
    classify-imports
python_requires = >=3.7,<3.11

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
dev = flake8-pep604;flake8-no-pep420

[mypy]
strict = true
exclude = ^setup\.py$
show_error_codes = true

[mypy-tests.*]
disallow_untyped_calls = False
disallow_untyped_defs = False
warn_return_any = False
strict_equality = False

[tool:pytest]
addopts = --strict-markers
filterwarnings = error

[flake8]
select = UNT001
ignore =
    # E501 line too long (82 > 79 characters)
    # because we just let 'black' handle this
    E501
    # W503 line break before binary operator
    # also handled by `black`
    W503

[isort]
profile = black

[coverage:run]
plugins = covdefaults
