[metadata]
name = unused-deps
version = 0.0.1
author = Matthew Hughes
author_email = matthewhughes934@gmail.com
description = Find unused dependencies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    importlib-metadata>=1.0.0;python_version<="3.7"
    tomli;python_version<="3.11"
    packaging
python_requires = >=3.7,<3.11

[options.packages.find]
exclude =
    tests*
    scripts/*

[options.package_data]
unused_deps = py.typed

[options.entry_points]
console_scripts =
    py-unused-deps = unused_deps.main:main

[options.extras_require]
foo = bar>=1.2

[mypy]
strict = true
exclude = ^setup\.py$
show_error_codes = true
# mypy can't handle version-specific `type: ignore` comments
# https://github.com/python/mypy/issues/8823
warn_unused_ignores = false

[mypy-tests.*]
disallow_untyped_calls = False
disallow_untyped_defs = False
warn_return_any = False
strict_equality = False

[tool:pytest]
addopts = --strict-markers --ignore tests/end_to_end --ignore tests/end_to_end/data
filterwarnings = error

[flake8]
select = UNT001,INP001
ignore =
    # E501 line too long (82 > 79 characters)
    # because we just let 'black' handle this
    E501
    # W503 line break before binary operator
    # also handled by `black`
    W503
per-file-ignores =
    setup.py:INP001

[isort]
profile = black

[coverage:run]
plugins = covdefaults
omit = tests/end_to_end/*
source =
    unused_deps/
    tests/

[coverage:report]
show_missing = true
skip_covered = true
fail_under = 100
