[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dist-missing-a-dep"
version = "0.1.0"
requires-python = ">= 3.7"

dependencies = [
    "py-unused-deps-testing-foo",
    "py-unused-deps-testing-bar",
]

[tool.setuptools]
py-modules = ["missing_dep"]
