[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dist-missing-extra-dep"
version = "0.1.0"
dependencies = [
    "py-unused-deps-testing-foo",
]

[project.optional-dependencies]
tests = [
    "py-unused-deps-testing-bar"
]

[tool.setuptools]
py-modules = ["missing_extra-dep"]
