[tool.poetry]
name = "nested-dist-all-deps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "nested_all_deps", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
py-unused-deps-testing-foo = "*"
py-unused-deps-testing-bar = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
